[tool.poetry]
name = "temp-store"
version = "0.1.0"
description = ""
authors = ["MaggeSN <122047522+MaggeSN@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
